added section text-center attribute

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
 
-    <section class="section-main text-md-start px-3">
+    <section class="section-main text-center text-md-start px-3">
         <div class="container-lg section-container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
