Added projects to projects section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p class="lead my-3">
                       "Always be persevered, be hungry for knowledge, for you will always learn something new"
                     </p>
-                    <button class="btn-resume"><i class="fa-solid fa-download"></i> Download Resume</button>
+                    <a href="images/De Guzman Resume UPDATED.pdf" download="De Guzman Resume"><button class="btn-resume"><i class="fa-solid fa-download"></i> Download Resume</button> </a>
                 </div> 
                 <img class="img-fluid w-50 d-none d-sm-block px-2 img-avatar" src="images/avatar.png" alt=""/>
               </div>
@@ -220,23 +220,46 @@
   <section class="section-about text-md-start px-3 my-3 " id="about">
     <div class="my-5"></div>
     <h1 class="text-center mb-3" style="color: #fca311"><strong>My Projects(Complete and Incomplete)</strong></h1>
-    <div class="container-fluid section-container">
-        <div class="d-sm-flex align-items-center justify-content-between">
-          <img class="img-fluid d-none d-sm-block px-2 img-about" src="images/about.JPG" alt=""/>
-            <div>
-                <div class="lead my-3 mx-3">
-                  <h2> <strong>So, who am I?</strong> </h2>
-                  <p class="about-text">
-                    Hello! I'm a former student who pursued a Bachelor's degree in Information Technology. I'm passionate about <span class="bold-text">web development and proficient in Bootstrap, PHP, HTML, and CSS</span>. I'm constantly honing my skills in <span class="bold-text">JavaScript</span> to enhance my expertise further.
-                    <br>
-                    <br>
-                    Apart from my technical abilities, I have a creative side too. I enjoy video editing as a hobby, adding another dimension to my skill set. When I'm not buried in code or refining my editing skills, you'll likely find me buried in a book, as I have a keen interest in continuous learning and self-improvement.
-                    <br>
-                    <br>
-                    Let's connect and explore the endless possibilities in the world of technology together!
-                  </p>
+    <div class="container-lg section-container">
+          <div class="row g-4 align-items-center justify-content-center ">
+            <div class="col-lg mx-auto">
+              <div class="card card-container">
+                <img src="images/Project-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">First Portfolio Project 2022</h5>
+                  <br>
+                  <p class="card-text">My very first Portfolio Project created in 2022 to boost my interest in the world of Web Development.</p>
+                  <br>
+                  <br>
+                  <a href="https://markgg33.github.io/cdportfolio/" class="btn-resume" style="margin-bottom: 10px;" >Navigate Here</a>
                 </div>
-            </div> 
+              </div>
+            </div>  
+            <div class="col-lg mx-auto">
+              <div class="card card-container">
+                <img src="images/Project-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Second Portfolio Project 2023</h5>
+                  <br>
+                  <p class="card-text">One of my portfolios created to advertise my skills as a practitioner of Flutter Framework and Improvement in Web Development.</p>
+                  <br>
+                  <a href="https://markgg33.github.io/new-cdp-portfolio/" class="btn-resume">Navigate Here</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg mx-auto">
+              <div class="card card-container">
+                <img src="images/Project-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">TO DO LIST SYSTEM 2024</h5>
+                  <br>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <br>
+                  <br>
+                  <a href="http://cdp-task-management.infinityfreeapp.com/" class="btn-resume">Navigate Here</a>
+                </div>
+              </div>
+            </div>  
           </div>
     </div>
 </section>
