added footer to deploy

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   </head>
 
   <body>
+
+    <script>
+      alert("Portfolio is still in progress for finalization. Thank you.")
+    </script>
     
     <nav class="navbar navbar-expand-lg nav-main">
       <div class="container-fluid nav-container">
@@ -216,20 +220,14 @@
     <div class="container-lg">
       <div class="row align-items-center justify-content-between">
         <div class="col-md p-5">
-          <h2><strong>HTML & CSS Specialty</strong></h2>
+          <h2><strong>Web Development Specialization</strong></h2>
           <p class="lead">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab
-            ullam, provident porro quasi ex consectetur?
+            HTML / CSS / Javascript
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-            modi eaque laborum magni ullam expedita tempore, delectus nulla
-            praesentium illum. Asperiores consectetur laudantium voluptas
-            itaque ab veritatis laboriosam accusantium aut.
+            What are my specializations in the web development industry as a basic practitioner of HTML, CSS, and Javascript?<br><br>
+            As an individual who is learning continuously, it is always a new thing for me when it comes to discovering what I want to learn.
           </p>
-          <a href="#" class="btn btn-light mt-3">
-            <i class="fa-solid fa-chevron-right chevron"></i>Read More
-          </a>
         </div>
         <div class="col-md">
           <img src="html-photo.svg" class="img-fluid d-none d-sm-block" alt="" />
@@ -241,7 +239,7 @@
 
   <section class="section-about text-md-start my-3 " id="projects">
     <div class="my-5"></div>
-    <h1 class="text-center mb-3" style="color: #fca311"><strong>My Projects(Complete and Incomplete)</strong></h1>
+    <h1 class="text-center mb-3" style="color: #fca311"><strong>My Projects</strong></h1>
     <div class="container-lg section-container">
           <div class="row g-4 align-items-center justify-content-center ">
             <div class="col-lg mx-auto">
@@ -285,6 +283,10 @@
           </div>
     </div>
 </section>
+
+<footer class="bootstrap-footer">
+  <p class="text-center mt-3">All Rights Reserved &#169; <strong>Cat Dumpling Productions 2024 </strong></p>
+</footer>
 
     
     <!--AUTO TYPING SCRIPT JS PLUGIN-->
