added reminder for alert for cv download

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 
     <script>
-      alert("Portfolio is still in progress for finalization. Thank you.")
+      alert("Portfolio is still in progress for finalization. CV / Resume is downloadable for those who are interested. Thank you.")
     </script>
     
     <nav class="navbar navbar-expand-lg nav-main">
