--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       src="https://kit.fontawesome.com/92cde7fc6f.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -21,6 +23,8 @@
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animated-counter-prograssbar.css" />
+
+    <!---FOR CDN BOOTSTRAP---->
   </head>
 
   <body>
