Changed educational attainment

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <div class="lead my-3 mx-3">
                     <h2> <strong>So, who am I?</strong> </h2>
                     <p class="about-text">
-                      Hello! I'm a former student who pursued a Bachelor's degree in Information Technology. I'm passionate about <span class="bold-text">web development and proficient in Bootstrap, PHP, HTML, and CSS</span>. I'm constantly honing my skills in <span class="bold-text">JavaScript</span> to enhance my expertise further.
+                      Hello! I'm an Associate's Degree holder of I.T from Saint John Bosco Kalentong Branch, who currently pursue a Bachelor's Degree in Information Technology. I'm passionate about <span class="bold-text">web development and proficient in Bootstrap, PHP, HTML, and CSS</span>. I'm constantly honing my skills in <span class="bold-text">JavaScript</span> to enhance my expertise further.
                       <br>
                       <br>
                       Apart from my technical abilities, I have a creative side too. I enjoy video editing as a hobby, adding another dimension to my skill set. When I'm not buried in code or refining my editing skills, you'll likely find me buried in a book, as I have a keen interest in continuous learning and self-improvement.
