changed 3 card description

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="card-body">
                   <h5 class="card-title">TO DO LIST SYSTEM 2024</h5>
                   <br>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">One of the first deployed projects from System Integration II Subject</p>
                   <br>
                   <br>
                   <a href="http://cdp-task-management.infinityfreeapp.com/" target="_blank" class="btn-resume">Navigate Here</a>
