--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
     <script>
         var typed = new Typed('#auto-type', {
-          strings: ['Developer in Training', 'Video Editor'],
+          strings: ['Developer in Training', 'Video Editor', 'Instructor'],
           typeSpeed: 50,
           backSpeed: 50,
           loop: true
